--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .pio
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
-.*
-!/.gitignore
+.vscode
+.gitignore
+.editorconfig
+.gitattributes
+*.tgz
+*.zip
